--- a/www/buscar.html
+++ b/www/buscar.html
@@ -18,8 +18,12 @@
 
 <div data-role ="header"><img src="img/logo.png"></div>
 
+<form>
+     <label for="search-1">Search:</label>
+     <input name="search-1" id="search-1" value="" type="search">
+</form>
+
 <div data-role="content">
-<p> El sitio donde encontrarás las mejores opciones de proveedores con conciencia verde <p/>
 </div>
 
 <div data-role="footer"></div>
